--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@ http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>3.8.1</version>
+      <version>$3.8.1</version>
       <scope>test</scope>
     </dependency>
     <dependency>
